# zen-mcp-server

./: .aider.chat.history.md  .codeindexignore  .coveragerc  .dockerignore  .env.docker.example  .env.example  .env.portkey.example  .gitignore  .mcp.json  .pre-commit-config.yaml  =23.2.0  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_CLI_TEST_COMMANDS.md  COMMIT_MESSAGE.md  DEPLOYMENT_GUIDE.md  DYNAMIC_MCP_IMPLEMENTATION.md  Dockerfile  GEMINI_CODE_REVIEW_RESPONSE.md  INSTALL-ZAI.md  LIVE_MCP_TESTING_RESULTS.md  MCP_FIX_DOCUMENTATION.md  MCP_VERSION_REPORT.md  PHASE2_SCHEMA_REFACTORING_DESIGN.md  PHASE3_PERFORMANCE_REPORT.md  PHASE_1_UX_IMPROVEMENTS.md  PLAN.md  PR_BUG_FIXES.md  PR_DESCRIPTION.md  PR_READY_SUMMARY.md  PULL_REQUEST.md  README-DOCKER.md  README-ZAI.md  README-zh.md  README.md  RECOMMENDATIONS.md  RESEARCH.md  RESUME_PHASE2.md  ROADMAP.md  SCHEMA_FIX_SUMMARY.md  (+79 more)
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.claude/: settings.json  settings.local.json
.trunk/: trunk.yaml
agent/: graph.py  llm_factory.py  state.py
clink/: constants.py  models.py  registry.py
conf/: custom_models.json  gemini_models.json  openai_models.json  openrouter_models.json  portkey_models.json  xai_models.json  zhipu_models.json
consensus_outputs/: consensus_response_20250912_003144.md  consensus_response_20250912_015908.md  consensus_response_20250912_015920.md  consensus_response_20250912_045515.md  consensus_response_20250912_045847.md  consensus_response_20250912_051323.md  consensus_response_20250912_051711.md  consensus_response_20250912_052205.md  consensus_response_20250912_052224.md  consensus_response_20250912_052238.md  consensus_response_20250912_084714.md  consensus_response_20250912_084729.md  consensus_response_20250912_084819.md  consensus_response_20250912_084834.md
docker/: README.md  docker-compose.gateway.yml
docs/: ALIGNMENT_VALIDATION.md  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE_ALIGNMENT.md  AZURE_OPENAI_TROUBLESHOOTING.md  CONFIGURATION_GUIDE.md  CONSOLIDATION_SUMMARY.txt  GATEWAY_PLAYBOOK.md  MIGRATION_GUIDE.md  MIGRATION_STRATEGY.md  PROJECT_STATUS.md  README_ARCH.md  TOOL_CONSOLIDATION_ANALYSIS.md  adding_providers-zh.md  adding_providers.md  adding_tools-zh.md  advanced-usage-zh.md  advanced-usage.md  ai-collaboration-zh.md  ai_banter-zh.md  architecture.md  autonomous-agents.md  azure-gpt5-guide.md  bedrock-setup.md  clink-retry.md  configuration-zh.md  configuration.md  context-revival-zh.md  context-revival.md  contributions-zh.md  custom_models-zh.md  custom_models.md  development.md  docker-deployment-zh.md  docker-deployment.md  gemini-setup-zh.md  getting-started-zh.md  getting-started.md  locale-configuration-zh.md  logging-zh.md  logging.md  (+12 more)
examples/: claude_desktop_uv_macos.json  zen-config-minimal.json
providers/: __init__.py  async_base.py  async_gemini.py  async_openai_compatible.py  async_openai_provider.py  async_provider_setup.py  async_registry.py  azure_openai.py  base.py  bedrock.py  connection_mixin.py  custom.py  dial.py  gateway.py  gemini.py  openai.py  openrouter.py  (+11 more)
(+270 files in other folders)
